--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,31 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Déclencheur sur push dans la branche main
 
 jobs:
-
-  build:
-
-    runs-on: ubuntu-latest
-
+  build-and-push:
+    runs-on: ubuntu-latest  # Exécute le job sur un runner Ubuntu
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Checkout code
+        uses: actions/checkout@v2  # Récupère le code source
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1  # Configure Docker Buildx
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}  # Utilise le nom d'utilisateur Docker Hub stocké dans les secrets GitHub
+          password: ${{ secrets.DOCKER_PASSWORD }}  # Utilise le mot de passe Docker Hub stocké dans les secrets GitHub
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .  # Chemin du contexte de build (généralement le répertoire racine du projet)
+          file: Dockerfile  # Spécifie le nom du Dockerfile
+          push: true  # Active le push de l'image vers un registre
+          tags: yannickbodin/ecn_ua_http:latest  # Remplacez "yourusername" par votre nom d'utilisateur Docker Hub
+          platforms: linux/arm/v7  # Spécifie la plateforme cible pour le build
