--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - dev  # Déclencheur sur push dans la branche main
+      - main  # Déclencheur sur push dans la branche main
 
 jobs:
   build-and-push:
@@ -28,4 +28,4 @@ jobs:
           file: Dockerfile  # Spécifie le nom du Dockerfile
           push: true  # Active le push de l'image vers un registre
           tags: yannickbodin/ecn_ua_base_env_fastapi:latest  # Remplacez "yourusername" par votre nom d'utilisateur Docker Hub
-          platforms: linux/amd64, linux/arm64, linux/arm/v7  # Spécifie la plateforme cible pour le build
+          platforms: linux/arm/v7  # Spécifie la plateforme cible pour le build
